# devol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml  test_day2.py  test_day3.py  test_setup.py
.claw/: claw.yaml
.claw/goals/pr-notes/: prompt.yaml
.github/workflows/: ci.yml  release.yml
benchmark/: __init__.py  display.py  main.py  metrics.py  plots.py  runner.py
examples/: benchmark_schedules.py  cartpole.py  cartpole_visual.py  live_cartpole.py  live_two_peaks.py  mnist_config.yaml  sphere_config.yaml  two_peaks.py
examples/mnist/: config.py  fitness.py  lenet5.py  serialization.py  train.py
scripts/: generate_readme_figure.py
src/devol/: __init__.py  algorithm.py  cli.py  config.py  distance.py  evolution.py  exceptions.py  fitness.py  schedules.py  types.py
tests/: test_algorithm.py  test_ci_n_peaks.py  test_config_models.py  test_distance.py  test_evolution_core.py  test_fitness.py  test_integration_two_peaks.py  test_schedules.py
tests/ci/: __init__.py  n_peaks.py
