[project]
name = "devol"
version = "0.1.0"
description = "Diffusion Evolution Algorithm - Evolution through iterative denoising"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control]>=1.2.1",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-yaml>=1.6.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.0.0",
]
examples = [
    "matplotlib>=3.8.0",
    "gymnasium>=0.29.0",
]

[project.scripts]
devol = "devol.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devol", "examples"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
