[project]
name = "devol"
version = "0.1.0"
description = "Diffusion Evolution Algorithm - Evolution through iterative denoising"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Dario Cazzani", email = "dariocazzani@gmail.com"},
    {name = "Aleksandr Yeganov", email = "ayeganov@gmail.com"},
]
keywords = [
    "evolution",
    "optimization",
    "diffusion",
    "evolutionary-algorithms",
    "black-box-optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-yaml>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/LabStrangeLoop/devol"
Repository = "https://github.com/LabStrangeLoop/devol"
Issues = "https://github.com/LabStrangeLoop/devol/issues"
Changelog = "https://github.com/LabStrangeLoop/devol/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=8.0.0",
    "twine>=5.0.0",
]
examples = [
    "matplotlib>=3.8.0",
    "gymnasium[classic-control]>=1.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
benchmark = [
    "matplotlib>=3.8.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]
all = [
    "devol[dev,examples,benchmark]",
]

[project.scripts]
devol = "devol.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devol"]

[tool.ruff]
line-length = 120
target-version = "py311"
# Demo scripts are linted separately; they use argparse globals, numpy meshgrid
# conventions, and half-finished code that doesn't belong in the published package.
exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src/devol"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
